--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-		"start": "node src/index.js"
+		"start": "node src/index.js",
+		"test": "jest --detectOpenHandles"
 	},
 	"author": "Agwara Nnaemeka",
 	"license": "ISC",
@@ -14,12 +15,14 @@
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"jest": "^26.4.2",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.26.0",
 		"mongodb": "^3.5.9",
 		"mongoose": "^5.9.19",
 		"multer": "^1.4.2",
-		"redis": "^3.0.2",
+		"puppeteer": "^5.2.1",
+		"redis": "^2.8.0",
 		"sharp": "^0.25.4",
 		"validator": "^13.1.1"
 	},
